welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:27: error: ';' expected but ')' found.
      gauche());
              ^